--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Miniature, embeddable Scheme
+title: Muffet, the fast link checker
 description: The no-std and no-alloc Scheme implementation in Rust.
 template: splash
 hero:
