--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -1,12 +1,12 @@
 ---
 title: Muffet, the fast link checker
-description: The no-std and no-alloc Scheme implementation in Rust.
+description: The fast link checker for static websites.
 template: splash
 hero:
   image:
     alt: Icon
     file: ../../../public/icon.svg
-  tagline: The no-std and no-alloc Scheme implementation in Rust.
+  tagline: The fast website link checker for static websites.
   actions:
     - text: Get started
       link: /stak/install
