--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -9,13 +9,9 @@ hero:
   tagline: The fast website link checker for static websites.
   actions:
     - text: Get started
-      link: /stak/install
+      link: /muffet/install
       icon: right-arrow
       variant: primary
-    - text: Rust integration
-      link: https://docs.rs/stak/
-      icon: document
-      variant: secondary
 ---
 
 import Readme from "../../../../README.md";
