--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Muffet, the fast link checker
-description: The fast link checker for static websites.
+description: The fast link checker for static websites
 template: splash
 hero:
   image:
