--- a/doc/src/content/docs/usage.mdx
+++ b/doc/src/content/docs/usage.mdx
@@ -3,11 +3,13 @@ title: Usage
 description: How to use Muffet in terminal and CI platforms
 ---
 
+import Help from "../../components/Help.md";
+
 ## Basic usage
 
 By running `muffet --help` in your terminal, you can see help messsages for the basic usage of Muffet.
 
-> WIP
+<Help />
 
 ## GitHub Action
 
