--- a/doc/src/content/docs/usage.mdx
+++ b/doc/src/content/docs/usage.mdx
@@ -13,7 +13,7 @@ By running `muffet --help` in your terminal, you can see help messsages for the 
 
 ## Docker
 
-If your website is hosted remotely or your Docker allows you to connect to the host network, you can run Muffet in a Docker image to test your websites.
+If your website is hosted remotely or your Docker installation allows you to connect to the host network, you can run Muffet in a Docker image to test your websites.
 
 ```sh
 docker run raviqqe/muffet https://shady.bakery.hotland
