--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -14,6 +14,7 @@ hero:
       variant: primary
 ---
 
+import "@fontsource/noto-color-emoji";
 import Readme from "../../../../README.md";
 
 <Readme />
