--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -5,7 +5,7 @@ template: splash
 hero:
   image:
     alt: Icon
-    file: ../../../public/icon.svg
+    file: ../../icon.svg
   tagline: The fast website link checker for static websites.
   actions:
     - text: Get started
