Add GitHub link

--- a/doc/src/content/docs/index.mdx
+++ b/doc/src/content/docs/index.mdx
@@ -12,6 +12,10 @@ hero:
       link: /muffet/install
       icon: right-arrow
       variant: primary
+    - text: GitHub
+      link: https://github.com/raviqqe/muffet
+      icon: github
+      variant: secondary
 ---
 
 import Readme from "../../../../README.md";
